--- a/client/public/templates/dashboard.html
+++ b/client/public/templates/dashboard.html
@@ -334,7 +334,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="JHUB Africa">
+            <img src="../assets/images/logo.png" alt="JHUB Africa">
             <span class="logo-text">JHUB Africa</span>
         </div>
         
@@ -556,7 +556,7 @@
   });
 </script>
 
-<script src="/js/apiConnector.js"></script>
+<script src="../assets/js/apiConnector.js"></script>
 <script>
   (async function() {
     // Check authentication
